harvard-maga: .jpeg, mp3

--- a/index.html
+++ b/index.html
@@ -64,14 +64,13 @@
     .caption {
       font-size: 0.8em;
       color: #666;
-      margin: 5px auto 15px;
+      margin: 5px auto 5px;
       max-width: 680px;
     }
-    .byline {
-      font-size: 0.9em;
-      font-style: italic;
-      margin: 0 auto;
-      max-width: 680px;
+    .audio-player {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 20px;
     }
     article {
       max-width: 680px;
@@ -116,8 +115,14 @@
   <div class="title">The campus counter-revolution</div>
   <div class="subhead">Donald Trump’s plan to remake universities threatens America’s prosperity and freedom</div>
   <div class="meta">Image: Peter Crowther/Alamy</div>
-  <img src="https://www.economist.com/cdn-cgi/image/width=1424,quality=80,format=auto/content-assets/images/20250412_LDD002_FH.jpg" alt="Harvard University with MAGA banners" class="lead-image">
+  <img src="harvard-maga.jpeg" alt="Harvard University with MAGA banners" class="lead-image">
   <div class="caption">Harvard University library adorned with banners spelling out 'MAGA'</div>
+  <div class="audio-player">
+    <audio controls>
+      <source src="harvard-maga.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+  </div>
   <div class="arrow-links">
     → <a href="#">Trump’s incoherent trade policy will do lasting damage</a><br>
     → <a href="#">The campus counter-revolution</a><br>
