--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <div class="title">The campus counter-revolution</div>
   <div class="subhead">Donald Trump’s plan to remake universities threatens America’s prosperity and freedom</div>
   <div class="meta">Image: Peter Crowther/Alamy</div>
-  <img src="harvard-maga.jpeg" alt="Harvard University with MAGA banners" class="lead-image">
+  <img src="https://www.economist.com/cdn-cgi/image/width=1424,quality=80,format=auto/content-assets/images/20250412_LDD002_FH.jpg" alt="Harvard University with MAGA banners" class="lead-image">
   <div class="caption">Harvard University library adorned with banners spelling out 'MAGA'</div>
   <div class="audio-player">
     <audio controls>
